# chchang-web

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build-lx.sh  build-win.bat  heroku.yml  manual-deps.txt  package.json  server.js
chchang-web-ui/: package.json
chchang-web-ui/public/: index.html
chchang-web-ui/src/: App-0.module.scss  App-1080.module.scss  App.js  App.module.scss  ModelCtrl.js  makeid.js  puppet.js
chchang-web-ui/src/App/: ArticleList.js  ArticleList.module.scss  ArticleView.js  ArticleView.module.scss  Content.js  Content.module.scss  DevLogList.js  DevLogList.module.scss  GeneralList.js  MainNav.js  MainNav.module.scss  SiteTree.js  SiteTree.module.scss  Utils.scss  screenDecl.js  screenLevel.js
chchang-web-ui/src/ModelCtrl/: About.js  Article.js  Devlog.js  config.js
cmake/: hunter_config.cmake  install.cmake  packages.cmake
cmake/scheme/: exe.cmake  test.cmake
devlog/: 20201127-Start-from-nothing.md  20201127-start-from-nothing.md  20201128-Host-survey.md  20201128-host-survey.md  20201129-Backend-solution.md  20201130-Compiled.md  20201211-Frontend-design.md  20201213-Frontend-3rdparty-test.md
src/avalon/app/: path.hpp
src/chchang-web/: config.json  model.h  server.cmake  server.cpp  server.h  utils.hpp
src/chchang-web/api/v1/: guath.hpp  userinfo.hpp  utils.h
src/chchang-web/model/: config.hpp
src/chchang-web/model/schema/: tab_article.hpp  tab_user.hpp
src/sqlpp17/clause/: create_table_if_not_exists.h
src/sqlpp17/postgresql/: text_type_to_sql_string.h
src/sqlpp17/postgresql/clause/: create_table_if_not_exists.h
src/test/chchang-web/: model_test.cpp  server_test.cmake  server_test.cpp
